--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <h1 class=main_title>Half Life <sup>2</sup></h1>
+    <ul class="main_menu">
+        <a><li>mew game</li></a>
+        <a><li>load game</li></a>
+        <a><li>achievements</li></a>
+        <a><li>options</li></a>
+        <a><li>quit</li></a>
+    </ul>
 </body>
 </html>
