--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1 class=main_title>Half Life <sup>2</sup></h1>
+   <h1 class=main_title>HALF LIFE <sup>2</sup></h1>
     <ul class="main_menu">
-        <a><li>mew game</li></a>
-        <a><li>load game</li></a>
-        <a><li>achievements</li></a>
-        <a><li>options</li></a>
-        <a><li>quit</li></a>
+        <li><a>new game</a></li>
+        <li><a>load game</a></li>
+        <li><a>achievements</a></li>
+        <li><a>options</a></li>
+        <li><a>quit</a></li>
     </ul>
 </body>
 </html>
