--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>v0.0.5 - Half Life 2 Menu Simulation</title>
+    <title>v0.1.1 - Half Life 2 Menu Simulation</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
    <h1 class=main_title>HALF LIFE <sup>2</sup></h1>
