--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>v0.1.1 - Half Life 2 Menu Simulation</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="content.js"></script>
 </head>
 <body>
    <h1 class=main_title>HALF LIFE <sup>2</sup></h1>
