--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>v0.1.9 - Half Life 2 Menu Simulation</title>
+    <title>v0.1.10 - Half Life 2 Menu Simulation</title>
     <link rel="stylesheet" href="style.css">
+    <script src="jquery-3.2.1.min.js"></script>
     <script src="script.js"></script>
     <script src="content.js"></script>
 </head>
 <body>
+  <div class="mask"></div>
    <h1 class=main_title>HALF LIFE <sup>2</sup></h1>
     <ul class="main_menu">
         <li><a>new game</a></li>
