--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>v0.2.2 - Half Life 2 Menu Simulation</title>
+    <title>v0.2.3 - Half Life 2 Menu Simulation</title>
     <link rel="stylesheet" href="style.css">
     <script src="jquery-3.2.1.min.js"></script>
     <script src="script.js"></script>
@@ -63,12 +63,79 @@
             <img src="images/icon1.png" class="closeButton">
         </div>
         <div class="content">
-            <div>
-                
+           <p>Select a saved game in the list below, then click 'Load game'.</p>
+            <div class="scroll">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <img src="images/chapters/chapter2.png">
+                            </td>
+                            <td>
+                                <p>water hazard</p>
+                                <p>Tue Dec 26 16:34:10 2017</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="images/chapters/chapter2.png">
+                            </td>
+                            <td>
+                                <p>water hazard</p>
+                                <p>Tue Dec 26 16:34:10 2017</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="images/chapters/chapter2.png">
+                            </td>
+                            <td>
+                                <p>water hazard</p>
+                                <p>Tue Dec 26 16:34:10 2017</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="images/chapters/chapter2.png">
+                            </td>
+                            <td>
+                                <p>water hazard</p>
+                                <p>Tue Dec 26 16:34:10 2017</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="images/chapters/chapter2.png">
+                            </td>
+                            <td>
+                                <p>water hazard</p>
+                                <p>Tue Dec 26 16:34:10 2017</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="images/chapters/chapter2.png">
+                            </td>
+                            <td>
+                                <p>water hazard</p>
+                                <p>Tue Dec 26 16:34:10 2017</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="images/chapters/chapter2.png">
+                            </td>
+                            <td>
+                                <p>water hazard</p>
+                                <p>Tue Dec 26 16:34:10 2017</p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
             <button class="steamButton">Delete</button>
-            <button class="steamButton">Load</button>
             <button class="steamButton">Cancel</button>
+            <button class="steamButton">Load</button>
         </div>
     </div>
     
