--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>v0.2.3 - Half Life 2 Menu Simulation</title>
+    <title>v0.2.4 - Half Life 2 Menu Simulation</title>
     <link rel="stylesheet" href="style.css">
     <script src="jquery-3.2.1.min.js"></script>
     <script src="script.js"></script>
@@ -59,12 +59,12 @@
     <!-- ### load game -->
     <div class="dialogWindow loadGame">
         <div class="action">
-            <h1 class="title">new game</h1>
+            <h1 class="title">load game</h1>
             <img src="images/icon1.png" class="closeButton">
         </div>
         <div class="content">
            <p>Select a saved game in the list below, then click 'Load game'.</p>
-            <div class="scroll">
+            <div class="scroll scrollDiv">
                 <table>
                     <tbody>
                         <tr>
@@ -136,6 +136,90 @@
             <button class="steamButton">Delete</button>
             <button class="steamButton">Cancel</button>
             <button class="steamButton">Load</button>
+        </div>
+    </div>
+    <!-- ### achievements game -->
+    <div class="dialogWindow achievements">
+        <div class="action">
+            <h1 class="title">my achievements</h1>
+            <img src="images/icon1.png" class="closeButton">
+        </div>
+        <div class="content">
+            <div class="progress">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td><p>total achievements earned</p></td>
+                            <td><p>3/29 ( 10% )</p></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="progressBar">
+                    <div></div>
+                </div>
+            </div>
+            <div class="scroll scrollDiv">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <img src="images/icon3.png">
+                            </td>
+                            <td>
+                                <p>Atomizer</p>
+                                <p>Disintegrate 15 soldier by throwing them into a Combine ball field</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="images/icon3.png">
+                            </td>
+                            <td>
+                                <p>Atomizer</p>
+                                <p>Disintegrate 15 soldier by throwing them into a Combine ball field</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="images/icon3.png">
+                            </td>
+                            <td>
+                                <p>Atomizer</p>
+                                <p>Disintegrate 15 soldier by throwing them into a Combine ball field</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="images/icon3.png">
+                            </td>
+                            <td>
+                                <p>Atomizer</p>
+                                <p>Disintegrate 15 soldier by throwing them into a Combine ball field</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="images/icon3.png">
+                            </td>
+                            <td>
+                                <p>Atomizer</p>
+                                <p>Disintegrate 15 soldier by throwing them into a Combine ball field</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="images/icon3.png">
+                            </td>
+                            <td>
+                                <p>Atomizer</p>
+                                <p>Disintegrate 15 soldier by throwing them into a Combine ball field</p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <p><input type="checkbox"> Hide Achieved</p>
+            <button class="steamButton">Back</button>
         </div>
     </div>
     
