--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>v0.2.4 - Half Life 2 Menu Simulation</title>
+    <title>v0.2.5 - Half Life 2 Menu Simulation</title>
     <link rel="stylesheet" href="style.css">
     <script src="jquery-3.2.1.min.js"></script>
     <script src="script.js"></script>
@@ -222,6 +222,24 @@
             <button class="steamButton">Back</button>
         </div>
     </div>
-    
+    <!-- ### options -->
+    <div class="dialogWindow options">
+        <div class="action">
+            <h1 class="title">options</h1>
+            <img src="images/icon1.png" class="closeButton">
+        </div>
+        <div class="content">
+            <ul>
+                <li><a>Difficulty</a></li>
+                <li><a>Keyboard</a></li>
+                <li><a>Mouse</a></li>
+                <li><a>Audio</a></li>
+                <li><a>Video</a></li>
+            </ul>
+            <div class="dynamicOptions">
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
